<ul>
    <li>[<span style="color: #e21af3">BUG</span>] Chrome/Edge Chromium: Bei einigen MP4-Dateien kann kein Audio abgespielt werden. Der Button für die Lautstärke ist ausgegraut. Vermutlich Audio-Codec-Problem.</li>
    <li>[<span style="color: #e21af3">BUG</span>] Ordnerübergreifendes Autoplay funktioniert noch nicht, sofern Ordner und Medieninhalt im selben Elternordner sind</li>
</ul>
<b>Version 1.36</b>:<br>
<ul>
    <li>[<span style="color: darkgreen">BUGFIX</span>] Fehlerbehebung bei fehlender Internetverbindung</li>
</ul>
<b>Version 1.35</b>:<br>
<ul>
    <li>[<span style="color: darkgreen">BUGFIX</span>] Fehlerbehebung bei updateData.exe. Fehlerhafte Pfadgenerierung und folgendermassen fehlerhaftes anlegen der "zuletzt gesehen"-Liste)</li>
</ul>
<b>Version 1.34</b>:<br>
<ul>
    <li>[<span style="color: darkgreen">BUGFIX</span>] Fehlerbehebung bei updateData.exe. Fehlerhafte Pfadgenerierung wenn Stefflix direkt auf einem Laufwerk gespeichert wurde (nicht in einem Unterordner)</li>
</ul>
<b>Version 1.33</b>:<br>
<ul>
    <li>[<span style="color: red">FEATURE</span>] Aufheben der Ordnertiefenlimitierung</li>
    <li>[OPTIMIERUNG] Dynamischer Aufbau der Untermenüs</li>
    <li>[OPTIMIERUNG] Ändern des Linkaufbaus für Navigation und Inhalte</li>
</ul>
<b>Version 1.323</b>:<br>
<ul>
    <li>[<span style="color: red"><b>HOTFIX</b></span>] Chrome/Edge Chromium: Eingabefelder über einem Video-Element können nicht bedient werden.</li>
</ul>
<b>Version 1.322</b>:<br>
<ul>
    <li>[<span style="color: blue">INTERFACE</span>] Cursor-Style bei Links angepasst.</li>
    <li>[<span style="color: red"><b>HOTFIX</b></span>] Das erstellen der relativen Pfade mittels updateData.exe, konnte unter gewissen Umständen fehlerhaft sein.</li>
</ul>
<b>Version 1.321</b>:<br>
<ul>
    <li>[<span style="color: red"><b>HOTFIX</b></span>] Zeilenumbrüche in Feedbacknachrichten werden nun korrekt übermittelt.</li>
</ul>
<b>Version 1.32</b>:<br>
<ul>