@@ -1,1 +1,1 @@
-var version = 1.36;
+var version = 1.37;
